# online_notes

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/nginx/: default.conf
src/accounts/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/accounts/tests/: __init__.py  test_forms.py  test_managers.py  test_models.py  test_views.py
src/core/: urls.py
src/core/settings/: __init__.py
src/core/settings/components/: base.py  baton.py  dev.py
src/notes/: admin.py  apps.py  filters.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
src/notes/management/commands/: create-superuser-worktable.py
src/notes/migrations/: 0001_initial.py  0002_category.py  0003_note.py  0004_alter_note_options.py  0005_remove_worktable_session_worktable_session_key.py  0006_note_unique_words_note_words_and_more.py
src/notes/tests/: __init__.py  test_filters.py  test_forms.py  test_models.py  test_services.py  test_signals.py  test_views.py
src/selenium_tests/: __init__.py  test_case_tests.py  test_registration_user_work_with_notes.py  test_user_account_operations.py  test_user_categories_operations.py  test_user_logout.py  test_user_notes_operations.py  test_user_registration.py
src/static/js/: base.js
src/templates/: base.html  categories.html  home.html
src/templates/includes/: category_list.html  filter_panel.html  navbar.html  note_list.html  sort_panel.html
src/templates/includes/alerts/: error.html
src/templates/includes/modals/: modal_login_form.html  (+1 more)
